--- a/src/tool/styles/colors.scss
+++ b/src/tool/styles/colors.scss
@@ -1,7 +1,7 @@
 $border-color: #8d8d8d;
 
 $tab-border-color: $border-color;
-$tab-inactive-background-color: #ebebeb;
+$tab-inactive-background-color: #ddd;
 $tab-background-color: #fff;
 $tab-text-color: #434343;
 $tab-icon-color: #999;
